rs/client-gen-v1/tests/snapshots/generator__events_works.snap
---
source: rs/client-gen-v0/tests/generator.rs
expression: "gen_client(idl, \"ServiceWithEvents\")"
---
// Code generated by sails-client-gen. DO NOT EDIT.
#[allow(unused_imports)]
use sails_rs::{client::*, collections::*, prelude::*};
pub struct ServiceWithEventsProgram;

impl sails_rs::client::Program for ServiceWithEventsProgram {}

pub trait ServiceWithEvents {
    type Env: sails_rs::client::GearEnv;
    fn service_with_events(
        &self,
    ) -> sails_rs::client::Service<service_with_events::ServiceWithEventsImpl, Self::Env>;
}

impl<E: sails_rs::client::GearEnv> ServiceWithEvents
    for sails_rs::client::Actor<ServiceWithEventsProgram, E>
{
    type Env = E;
    fn service_with_events(
        &self,
    ) -> sails_rs::client::Service<service_with_events::ServiceWithEventsImpl, Self::Env> {
        self.service(stringify!(ServiceWithEvents))
    }
}

pub mod service_with_events {
    use super::*;

    pub trait ServiceWithEvents {
        type Env: sails_rs::client::GearEnv;
        fn do_this(
            &mut self,
            p1: NonZeroU256,
            p2: MyParam,
        ) -> sails_rs::client::PendingCall<io::DoThis, Self::Env>;
    }

    pub struct ServiceWithEventsImpl;

    impl<E: sails_rs::client::GearEnv> ServiceWithEvents
        for sails_rs::client::Service<ServiceWithEventsImpl, E>
    {
        type Env = E;
        fn do_this(
            &mut self,
            p1: NonZeroU256,
            p2: MyParam,
        ) -> sails_rs::client::PendingCall<io::DoThis, Self::Env> {
            self.pending_call((p1, p2))
        }
    }

    pub mod io {
        use super::*;
        sails_rs::io_struct_impl!(DoThis (p1: NonZeroU256, p2: super::MyParam) -> NonZeroU64);
    }

    #[cfg(not(target_arch = "wasm32"))]
    pub mod events {
        use super::*;
        #[derive(PartialEq, Debug, Encode, Decode)]
        #[codec(crate = sails_rs::scale_codec)]
        pub enum ServiceWithEventsEvents {
            One(u64),
            Two { id: u8, reference: u64 },
            Three(MyParam),
            Reset,
        }
        impl sails_rs::client::Event for ServiceWithEventsEvents {
            const EVENT_NAMES: &'static [Route] = &["One", "Two", "Three", "Reset"];
        }

        impl sails_rs::client::ServiceWithEvents for ServiceWithEventsImpl {
            type Event = ServiceWithEventsEvents;
        }
    }
}
#[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo)]
#[codec(crate = sails_rs::scale_codec)]
#[scale_info(crate = sails_rs::scale_info)]
pub struct MyParam {
    pub f1: NonZeroU256,
    pub f2: Vec<NonZeroU8>,
    pub f3: Option<(NonZeroU64, NonZeroU256)>,
}

#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
extern crate std;

#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
pub mod mockall {
    use super::*;
    use sails_rs::mockall::*;
    mock! {
        pub ServiceWithEvents {}

        #[allow(refining_impl_trait)]
        #[allow(clippy::type_complexity)]
        impl service_with_events::ServiceWithEvents for ServiceWithEvents {
            type Env = sails_rs::client::GstdEnv;
            fn do_this (&mut self, p1: NonZeroU256, p2: MyParam) -> sails_rs::client::PendingCall<service_with_events::io::DoThis, sails_rs::client::GstdEnv>;
        }
    }
}
