rs/client-gen-v1/tests/snapshots/generator__full_with_sails_path.snap
---
source: rs/client-gen-v1/tests/generator.rs
expression: code
---
// Code generated by sails-client-gen. DO NOT EDIT.
#[allow(unused_imports)]
use my_crate::sails::{client::*, collections::*, prelude::*};
pub struct ServiceProgram;

impl my_crate::sails::client::Program for ServiceProgram {}

pub trait Service {
    type Env: my_crate::sails::client::GearEnv;
    fn service(
        &self,
    ) -> my_crate::sails::client::Service<
        service::ServiceImpl,
        Self::Env,
        my_crate::sails::client::RouteName,
    >;
    fn counter(
        &self,
    ) -> my_crate::sails::client::Service<
        counter::CounterImpl,
        Self::Env,
        my_crate::sails::client::RouteName,
    >;
}

impl<E: my_crate::sails::client::GearEnv> Service
    for my_crate::sails::client::Actor<ServiceProgram, E>
{
    type Env = E;
    fn service(
        &self,
    ) -> my_crate::sails::client::Service<
        service::ServiceImpl,
        Self::Env,
        my_crate::sails::client::RouteName,
    > {
        self.service_v1(stringify!(Service))
    }
    fn counter(
        &self,
    ) -> my_crate::sails::client::Service<
        counter::CounterImpl,
        Self::Env,
        my_crate::sails::client::RouteName,
    > {
        self.service_v1(stringify!(Counter))
    }
}

pub trait ServiceCtors {
    type Env: my_crate::sails::client::GearEnv;
    /// New constructor
    #[allow(clippy::new_ret_no_self)]
    #[allow(clippy::wrong_self_convention)]
    fn new(
        self,
        a: u32,
    ) -> my_crate::sails::client::PendingCtor<
        ServiceProgram,
        io::New,
        Self::Env,
        my_crate::sails::client::RouteName,
    >;
    /// CreateWithData constructor
    fn create_with_data(
        self,
        a: u32,
        b: String,
        c: ThisThatSvcAppManyVariants,
    ) -> my_crate::sails::client::PendingCtor<
        ServiceProgram,
        io::CreateWithData,
        Self::Env,
        my_crate::sails::client::RouteName,
    >;
}

impl<E: my_crate::sails::client::GearEnv> ServiceCtors
    for my_crate::sails::client::Deployment<ServiceProgram, E>
{
    type Env = E;
    fn new(
        self,
        a: u32,
    ) -> my_crate::sails::client::PendingCtor<
        ServiceProgram,
        io::New,
        Self::Env,
        my_crate::sails::client::RouteName,
    > {
        self.pending_ctor_v1((a,))
    }
    fn create_with_data(
        self,
        a: u32,
        b: String,
        c: ThisThatSvcAppManyVariants,
    ) -> my_crate::sails::client::PendingCtor<
        ServiceProgram,
        io::CreateWithData,
        Self::Env,
        my_crate::sails::client::RouteName,
    > {
        self.pending_ctor_v1((a, b, c))
    }
}

pub mod io {
    use super::*;
    my_crate::sails::io_struct_impl_v1!(New (a: u32) -> ());
    my_crate::sails::io_struct_impl_v1!(CreateWithData (a: u32, b: String, c: super::ThisThatSvcAppManyVariants) -> ());
}

pub mod service {
    use super::*;

    pub trait Service {
        type Env: my_crate::sails::client::GearEnv;
        fn do_this(
            &mut self,
            p1: u32,
            p2: String,
            p3: (Option<String>, u8),
            p4: ThisThatSvcAppTupleStruct,
        ) -> my_crate::sails::client::PendingCall<
            io::DoThis,
            Self::Env,
            my_crate::sails::client::RouteName,
        >;
        fn do_that(
            &mut self,
            param: ThisThatSvcAppDoThatParam,
        ) -> my_crate::sails::client::PendingCall<
            io::DoThat,
            Self::Env,
            my_crate::sails::client::RouteName,
        >;
        fn this(
            &self,
            v1: Vec<u16>,
        ) -> my_crate::sails::client::PendingCall<
            io::This,
            Self::Env,
            my_crate::sails::client::RouteName,
        >;
        fn that(
            &self,
            v1: (),
        ) -> my_crate::sails::client::PendingCall<
            io::That,
            Self::Env,
            my_crate::sails::client::RouteName,
        >;
    }

    pub struct ServiceImpl;

    impl<E: my_crate::sails::client::GearEnv> Service
        for my_crate::sails::client::Service<ServiceImpl, E, my_crate::sails::client::RouteName>
    {
        type Env = E;
        fn do_this(
            &mut self,
            p1: u32,
            p2: String,
            p3: (Option<String>, u8),
            p4: ThisThatSvcAppTupleStruct,
        ) -> my_crate::sails::client::PendingCall<
            io::DoThis,
            Self::Env,
            my_crate::sails::client::RouteName,
        > {
            self.pending_call((p1, p2, p3, p4))
        }
        fn do_that(
            &mut self,
            param: ThisThatSvcAppDoThatParam,
        ) -> my_crate::sails::client::PendingCall<
            io::DoThat,
            Self::Env,
            my_crate::sails::client::RouteName,
        > {
            self.pending_call((param,))
        }
        fn this(
            &self,
            v1: Vec<u16>,
        ) -> my_crate::sails::client::PendingCall<
            io::This,
            Self::Env,
            my_crate::sails::client::RouteName,
        > {
            self.pending_call((v1,))
        }
        fn that(
            &self,
            v1: (),
        ) -> my_crate::sails::client::PendingCall<
            io::That,
            Self::Env,
            my_crate::sails::client::RouteName,
        > {
            self.pending_call((v1,))
        }
    }

    pub mod io {
        use super::*;
        my_crate::sails::io_struct_impl_v1!(DoThis (p1: u32, p2: String, p3: (Option<String>,u8,), p4: super::ThisThatSvcAppTupleStruct) -> (String,u32,));
        my_crate::sails::io_struct_impl_v1!(DoThat (param: super::ThisThatSvcAppDoThatParam) -> Result<(String,u32,), (String,)>);
        my_crate::sails::io_struct_impl_v1!(This (v1: Vec<u16>) -> u32);
        my_crate::sails::io_struct_impl_v1!(That (v1: ()) -> Result<String, String>);
    }
}

pub mod counter {
    use super::*;

    pub trait Counter {
        type Env: my_crate::sails::client::GearEnv;
        /// Add a value to the counter
        fn add(
            &mut self,
            value: u32,
        ) -> my_crate::sails::client::PendingCall<
            io::Add,
            Self::Env,
            my_crate::sails::client::RouteName,
        >;
        /// Substract a value from the counter
        fn sub(
            &mut self,
            value: u32,
        ) -> my_crate::sails::client::PendingCall<
            io::Sub,
            Self::Env,
            my_crate::sails::client::RouteName,
        >;
        /// Get the current value
        fn value(
            &self,
        ) -> my_crate::sails::client::PendingCall<
            io::Value,
            Self::Env,
            my_crate::sails::client::RouteName,
        >;
    }

    pub struct CounterImpl;

    impl<E: my_crate::sails::client::GearEnv> Counter
        for my_crate::sails::client::Service<CounterImpl, E, my_crate::sails::client::RouteName>
    {
        type Env = E;
        fn add(
            &mut self,
            value: u32,
        ) -> my_crate::sails::client::PendingCall<
            io::Add,
            Self::Env,
            my_crate::sails::client::RouteName,
        > {
            self.pending_call((value,))
        }
        fn sub(
            &mut self,
            value: u32,
        ) -> my_crate::sails::client::PendingCall<
            io::Sub,
            Self::Env,
            my_crate::sails::client::RouteName,
        > {
            self.pending_call((value,))
        }
        fn value(
            &self,
        ) -> my_crate::sails::client::PendingCall<
            io::Value,
            Self::Env,
            my_crate::sails::client::RouteName,
        > {
            self.pending_call(())
        }
    }

    pub mod io {
        use super::*;
        my_crate::sails::io_struct_impl_v1!(Add (value: u32) -> u32);
        my_crate::sails::io_struct_impl_v1!(Sub (value: u32) -> u32);
        my_crate::sails::io_struct_impl_v1!(Value () -> u32);
    }

    #[cfg(not(target_arch = "wasm32"))]
    pub mod events {
        use super::*;
        #[derive(PartialEq, Debug, Encode, Decode)]
        #[codec(crate = my_crate::sails::scale_codec)]
        pub enum CounterEvents {
            /// Emitted when a new value is added to the counter
            Added(u32),
            /// Emitted when a value is subtracted from the counter
            Subtracted(u32),
        }
        impl my_crate::sails::client::EventNames for CounterEvents {
            const EVENT_NAMES: &'static [my_crate::sails::client::Route] = &["Added", "Subtracted"];
        }

        impl my_crate::sails::client::Event<my_crate::sails::client::RouteName> for CounterEvents {
            fn decode_event(
                route: &my_crate::sails::client::RouteName,
                payload: impl AsRef<[u8]>,
            ) -> Result<Self, my_crate::sails::scale_codec::Error> {
                my_crate::sails::client::decode_event_v1::<Self>(route.0, payload)
            }
        }

        impl my_crate::sails::client::ServiceWithEvents<my_crate::sails::client::RouteName>
            for CounterImpl
        {
            type Event = CounterEvents;
        }
    }
}
#[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo)]
#[codec(crate = my_crate::sails::scale_codec)]
#[scale_info(crate = my_crate::sails::scale_info)]
pub struct ThisThatSvcAppTupleStruct(pub bool);
#[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo)]
#[codec(crate = my_crate::sails::scale_codec)]
#[scale_info(crate = my_crate::sails::scale_info)]
pub struct ThisThatSvcAppDoThatParam {
    pub p1: u32,
    pub p2: String,
    pub p3: ThisThatSvcAppManyVariants,
}
#[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo)]
#[codec(crate = my_crate::sails::scale_codec)]
#[scale_info(crate = my_crate::sails::scale_info)]
pub enum ThisThatSvcAppManyVariants {
    One,
    Two(u32),
    Three(Option<u32>),
    Four { a: u32, b: Option<u16> },
    Five((String, u32)),
    Six((u32,)),
}
#[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo)]
#[codec(crate = my_crate::sails::scale_codec)]
#[scale_info(crate = my_crate::sails::scale_info)]
pub enum T {
    One,
}
