rs/client-gen-v1/tests/snapshots/generator__nonzero_works.snap
---
source: rs/client-gen-v1/tests/generator.rs
expression: "gen_client(idl, \"NonZeroParams\")"
---
// Code generated by sails-client-gen. DO NOT EDIT.
#[allow(unused_imports)]
use sails_rs::{client::*, collections::*, prelude::*};
pub struct NonZeroParamsProgram;

impl sails_rs::client::Program for NonZeroParamsProgram {}

pub trait NonZeroParams {
    type Env: sails_rs::client::GearEnv;
    fn non_zero_params(
        &self,
    ) -> sails_rs::client::Service<
        non_zero_params::NonZeroParamsImpl,
        Self::Env,
        sails_rs::client::RouteName,
    >;
}

impl<E: sails_rs::client::GearEnv> NonZeroParams
    for sails_rs::client::Actor<NonZeroParamsProgram, E>
{
    type Env = E;
    fn non_zero_params(
        &self,
    ) -> sails_rs::client::Service<
        non_zero_params::NonZeroParamsImpl,
        Self::Env,
        sails_rs::client::RouteName,
    > {
        self.service_v1(stringify!(NonZeroParams))
    }
}

pub mod non_zero_params {
    use super::*;

    pub trait NonZeroParams {
        type Env: sails_rs::client::GearEnv;
        fn do_this(
            &mut self,
            p1: NonZeroU256,
            p2: MyParam,
        ) -> sails_rs::client::PendingCall<io::DoThis, Self::Env, sails_rs::client::RouteName>;
    }

    pub struct NonZeroParamsImpl;

    impl<E: sails_rs::client::GearEnv> NonZeroParams
        for sails_rs::client::Service<NonZeroParamsImpl, E, sails_rs::client::RouteName>
    {
        type Env = E;
        fn do_this(
            &mut self,
            p1: NonZeroU256,
            p2: MyParam,
        ) -> sails_rs::client::PendingCall<io::DoThis, Self::Env, sails_rs::client::RouteName>
        {
            self.pending_call((p1, p2))
        }
    }

    pub mod io {
        use super::*;
        sails_rs::io_struct_impl_v1!(DoThis (p1: NonZeroU256, p2: super::MyParam) -> NonZeroU64);
    }
}
#[derive(PartialEq, Clone, Debug, Encode, Decode, TypeInfo)]
#[codec(crate = sails_rs::scale_codec)]
#[scale_info(crate = sails_rs::scale_info)]
pub struct MyParam {
    pub f1: NonZeroU256,
    pub f2: Vec<NonZeroU8>,
    pub f3: Option<(NonZeroU64, NonZeroU256)>,
}

#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
extern crate std;

#[cfg(feature = "with_mocks")]
#[cfg(not(target_arch = "wasm32"))]
pub mod mockall {
    use super::*;
    use sails_rs::mockall::*;
    mock! {
        pub NonZeroParams {}

        #[allow(refining_impl_trait)]
        #[allow(clippy::type_complexity)]
        impl non_zero_params::NonZeroParams for NonZeroParams {
            type Env = sails_rs::client::GstdEnv;
            fn do_this (&mut self, p1: NonZeroU256, p2: MyParam) -> sails_rs::client::PendingCall<non_zero_params::io::DoThis, sails_rs::client::GstdEnv, sails_rs::client::RouteName>;
        }
    }
}
